force-app/main/default/objects/Additional_Contacts__c/Additional_Contacts__c.object-meta.xml
<CustomObject>
    <label>אנשי קשר נוספים</label>
    <nameField>
        <label>אנשי קשר נוספים</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>אנשי קשר נוספים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>