force-app/main/default/objects/Additional_Contacts__c/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <label>שם מלא</label>
    <length>255</length>
    <type>Text</type>
</CustomField>