force-app/main/default/objects/Additional_Contacts__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <label>נייד</label>
    <length>255</length>
    <type>Text</type>
</CustomField>