force-app/main/default/objects/Additional_Contacts__c/fields/Relationship_Text__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Text__c</fullName>
    <label>היכן הכירו</label>
    <length>255</length>
    <type>Text</type>
</CustomField>