force-app/main/default/objects/Additional_Contacts__c/fields/Type_Of_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Relationship__c</fullName>
    <label>סוג קרבה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>משפחה</fullName>
            </value>
            <value>
                <fullName>חברים מהבית</fullName>
            </value>
            <value>
                <fullName>חברים מהטיול</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>